--- a/modules/contrib/autologout/autologout.services.yml
+++ b/modules/contrib/autologout/autologout.services.yml
@@ -3,10 +3,16 @@ services:
     class: Drupal\autologout\EventSubscriber\AutologoutSubscriber
     tags:
       - {name: event_subscriber}
-    arguments: ['@autologout.manager', '@current_user', '@config.factory','@theme.manager','@datetime.time']
+    arguments: ['@autologout.manager', '@current_user', '@config.factory','@theme.manager','@datetime.time','@request_stack']
 
   autologout.manager:
     class: Drupal\autologout\AutologoutManager
     tags:
       - {name: autologout_manager}
-    arguments: ['@module_handler', '@config.factory', '@messenger', '@current_user', '@logger.factory', '@session_manager', '@user.data', '@datetime.time']
+    arguments: ['@module_handler', '@config.factory', '@messenger', '@current_user', '@logger.factory', '@session_manager', '@user.data', '@datetime.time','@entity_type.manager']
+
+  autologout_controller:
+    class: Drupal\autologout\Controller\AutologoutController
+    tags:
+      - {name: controller}
+    arguments: ['@url_generator.non_bubbling']
