--- a/modules/contrib/flood_unblock/flood_unblock.info.yml
+++ b/modules/contrib/flood_unblock/flood_unblock.info.yml
@@ -1,6 +1,6 @@
 name: Flood Unblock
 type: module
-description: "Interface for unblocking ip's that are blocked by the flood table"
+description: "Interface for unblocking the IP's that are blocked by the flood table."
 package: user
 configure: flood_unblock.form
 # version: VERSION
