--- a/modules/contrib/drush_entity/composer.json
+++ b/modules/contrib/drush_entity/composer.json
@@ -7,6 +7,7 @@
     "license": "GPL-2.0+",
     "minimum-stability": "dev",
     "require": {
+        "drupal/core": "^8 || ^9",
         "sebastian/exporter": "^4.0@dev"
     }
 }
